[CLEANUP] Coding guideline compliance